src/components/form.css
::-webkit-input-placeholder {
  color: theme("colors.gray.500");
}

:-moz-placeholder {
  color: theme("colors.gray.500");
  opacity: 1;
}

::-moz-placeholder {
  color: theme("colors.gray.500");
  opacity: 1;
}

:-ms-input-placeholder {
  color: theme("colors.gray.500");
}

::-ms-input-placeholder {
  color: theme("colors.gray.500");
}

::placeholder {
  color: theme("colors.gray.500");
}

.react-autosuggest__container {
  @apply absolute left-0 block w-full flex flex-row;
  top: 100%;
  margin-top: -2px;
}

.react-autosuggest__input {
  @apply py-2 px-3 w-full items-start appearance-none;
  font-weight: 400;
  font-size: 16px;
  background: #ffffff;
  border: 1px solid #bdbdbd;
  @screen lg {
    @apply px-4 py-3;
  }
}

.react-autosuggest__input--focused {
  outline: none;
}

.react-autosuggest__input::-ms-clear {
  display: none;
}

.react-autosuggest__input--open {
  border-radius: 0;
}

.react-autosuggest__suggestions-container {
  display: none;
}

.react-autosuggest__suggestions-container--open {
  margin-top: -2px;
  top: 100%;
  display: block;
  position: absolute;
  width: 100%;
  border: 1px solid #bdbdbd;
  background-color: #fff;
  font-size: 16px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  z-index: 2;
}

.react-autosuggest__suggestions-list {
  margin: 0;
  padding: 0;
  list-style-type: none;
  overflow-y: auto;
  max-height: 216px;
}

.react-autosuggest__suggestion {
  font-weight: 400;
  @apply py-2 px-3 cursor-pointer flex flex-row items-center;
  @screen lg {
    @apply px-4 py-3;
  }
}

.react-autosuggest__suggestion--highlighted {
  background-color: #436cff;
  color: #fff;
}

.react-autosuggest__section-container {
  border-top: 1px dashed #bdbdbd;
}

.react-autosuggest__section-container--first {
  border-top: 0;
}

.react-autosuggest__section-title {
  padding: 16px 24px;
  font-size: 12px;
  color: #777;
}

